# Sokoban-SDL-Cpp

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.md  README.md
Sokoban/: CMakeLists.txt  Makefile.am  Sokoban.cbp  aclocal.m4  common.mk  config.h.in  configure  configure.ac  configure~
Sokoban/include/core/: platform.hpp
Sokoban/src/: main.cpp  main.hpp
Sokoban/src/assets/fonts/freefont/: CREDITS  README  TROUBLESHOOTING
Sokoban/src/assets/levels/: 00.lvl
Sokoban/src/core/: Makefile.am  actor.cpp  actor.hpp  board.cpp  board.hpp  box.cpp  box.hpp  movable.cpp  movable.hpp  platform.cpp  platform.hpp  player.cpp  player.hpp  wall.cpp  wall.hpp
include/gui/: Menu.hpp  MenuPause.hpp  MenuSettings.hpp  Panel.hpp  Window.hpp
include/gui/component/: Button.hpp  Component.hpp  Container.hpp  Label.hpp
include/gui/entity/: Entity.hpp  EntityBox.hpp  EntityMovable.hpp  EntityPlatform.hpp  EntityPlayer.hpp  EntityWall.hpp
include/gui/state/: State.hpp  StateGame.hpp  StatePause.hpp  StateSettings.hpp  StateStack.hpp  StateTitle.hpp
res/assets/fonts/freefont/: ChangeLog
res/assets/images/Spritesheet/: sprites.xml
res/locale/: strings.json
src/: main.cpp  main.hpp
src/assets/fonts/freefont/: AUTHORS  INSTALL  USAGE
src/gui/: Menu.cpp  MenuPause.cpp  MenuSettings.cpp  Panel.cpp  Window.cpp
src/gui/component/: Button.cpp  Component.cpp  Container.cpp  Label.cpp
src/gui/entity/: Entity.cpp  EntityBox.cpp  EntityMovable.cpp  EntityPlatform.cpp  EntityPlayer.cpp  EntityWall.cpp
src/gui/state/: State.cpp  StateGame.cpp  StatePause.cpp  StateSettings.cpp  StateStack.cpp  StateTitle.cpp
